--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@angular/animations": "^8.2.2",
     "@angular/cdk": "^8.1.2",
-    "@angular/common": "~8.2.0",
+    "@angular/common": "^8.2.6",
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
     "@angular/forms": "~8.2.0",
