--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
     "angular-bootstrap-md": "^8.1.1",
     "angular-in-memory-web-api": "^0.9.0",
     "angular-svg-icon": "^8.0.0",
+    "body-parser": "^1.19.0",
+    "cors": "2.8.5",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "mongoose": "^5.7.1",
+    "mysql": "^2.17.1",
     "pdfmake-wrapper": "^1.0.7",
-    "rxjs": "^6.4.0",
+    "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
