--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
     "@angular/forms": "~8.2.0",
+    "@angular/http": "^7.2.15",
     "@angular/material": "^8.1.2",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
@@ -28,12 +29,13 @@
     "angular-svg-icon": "^8.0.0",
     "body-parser": "^1.19.0",
     "cors": "2.8.5",
-    "express": "^4.17.1",
+    "express": "4.17.1",
     "hammerjs": "^2.0.8",
     "mongoose": "^5.7.1",
     "mysql": "^2.17.1",
     "pdfmake-wrapper": "^1.0.7",
     "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
