--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "angular-in-memory-web-api": "^0.9.0",
     "angular-svg-icon": "^8.0.0",
     "body-parser": "^1.19.0",
+    "chart.js": "^2.9.2",
+    "chartjs-plugin-colorschemes": "^0.4.0",
     "cors": "2.8.5",
     "express": "4.17.1",
     "hammerjs": "^2.0.8",
