--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^5.7.1",
     "mysql": "^2.17.1",
     "ngx-pagination": "^4.1.0",
+    "pdfmake": "^0.1.62",
     "pdfmake-wrapper": "^1.0.7",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
