--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cors": "2.8.5",
     "express": "4.17.1",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
     "mysql": "^2.17.1",
     "ngx-pagination": "^4.1.0",
@@ -40,6 +41,7 @@
     "pdfmake-wrapper": "^1.0.7",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
+    "sweetalert2": "^9.4.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
