--- a/package.json
+++ b/package.json
@@ -11,57 +11,57 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.2",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.6",
-    "@angular/compiler": "~8.2.0",
-    "@angular/core": "~8.2.0",
-    "@angular/forms": "~8.2.0",
-    "@angular/http": "^7.2.15",
-    "@angular/material": "^8.1.2",
-    "@angular/platform-browser": "~8.2.0",
-    "@angular/platform-browser-dynamic": "~8.2.0",
-    "@angular/router": "~8.2.0",
-    "ag-grid-angular": "^21.1.0",
-    "ag-grid-community": "^21.1.1",
-    "angular-bootstrap-md": "^8.1.1",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/http": "^7.2.16",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "ag-grid-angular": "^21.2.2",
+    "ag-grid-community": "^21.2.2",
+    "angular-bootstrap-md": "^8.8.2",
     "angular-in-memory-web-api": "^0.9.0",
     "angular-svg-icon": "^8.0.0",
     "body-parser": "^1.19.0",
-    "chart.js": "^2.9.2",
+    "chart.js": "^2.9.3",
     "chartjs-plugin-colorschemes": "^0.4.0",
     "cors": "2.8.5",
     "express": "4.17.1",
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.1",
-    "mysql": "^2.17.1",
+    "mongoose": "^5.8.10",
+    "mysql": "^2.18.1",
     "ngx-pagination": "^4.1.0",
-    "pdfmake": "^0.1.62",
+    "pdfmake": "^0.1.63",
     "pdfmake-wrapper": "^1.0.7",
-    "rxjs": "^6.5.3",
-    "rxjs-compat": "^6.5.3",
-    "sweetalert2": "^9.4.1",
+    "rxjs": "^6.5.4",
+    "rxjs-compat": "^6.5.4",
+    "sweetalert2": "^9.7.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.802.0",
-    "@angular/cli": "~8.2.0",
-    "@angular/compiler-cli": "~8.2.0",
-    "@angular/language-service": "~8.2.0",
-    "@types/node": "~8.9.4",
+    "@angular-devkit/build-angular": "^0.803.24",
+    "@angular/cli": "^8.2.2",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
+    "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
